# ChangeLog for www-client/seamonkey
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.466 2013/11/02 15:25:45 polynomial-c Exp $

*seamonkey-2.22 (02 Nov 2013)

  02 Nov 2013; Lars Wendler <polynomial-c@gentoo.org> +seamonkey-2.22.ebuild:
  Security bump (bug #489796).

  28 Oct 2013; Lars Wendler <polynomial-c@gentoo.org> seamonkey-2.21.ebuild,
  seamonkey-2.21-r1.ebuild:
  Use latest ff patches.

  28 Oct 2013; Lars Wendler <polynomial-c@gentoo.org> seamonkey-2.21.ebuild,
  seamonkey-2.21-r1.ebuild:
  Fixed source URI for enigmail. Moved binutils from RDEPEND to DEPEND.

*seamonkey-2.21-r1 (25 Oct 2013)

  25 Oct 2013; Lars Wendler <polynomial-c@gentoo.org>
  +seamonkey-2.21-r1.ebuild:
  Revision bump to integrate enigmail-1.6.

  26 Sep 2013; Ian Stakenvicius <axs@gentoo.org>
  +files/moz24-drop-Wl-build-id.patch, seamonkey-2.21.ebuild:
  drop -Wl,--build-id from LDFLAGS, bug #465466

  25 Sep 2013; Lars Wendler <polynomial-c@gentoo.org> -seamonkey-2.20.ebuild,
  seamonkey-2.21.ebuild:
  Removed unused configure options and sed commands. Removed old ebuild.

  21 Sep 2013; Agostino Sarubbo <ago@gentoo.org> seamonkey-2.21.ebuild:
  Stable for x86, wrt bug #485258

  21 Sep 2013; Agostino Sarubbo <ago@gentoo.org> seamonkey-2.21.ebuild:
  Stable for amd64, wrt bug #485258

*seamonkey-2.21 (18 Sep 2013)

  18 Sep 2013; Lars Wendler <polynomial-c@gentoo.org> +seamonkey-2.21.ebuild,
  metadata.xml:
  Security bump (bug #485258).

  13 Aug 2013; Lars Wendler <polynomial-c@gentoo.org> -seamonkey-2.17.ebuild,
  -seamonkey-2.17.1.ebuild, -seamonkey-2.19.ebuild:
  Removed old (vulnerable) versions.

  12 Aug 2013; Agostino Sarubbo <ago@gentoo.org> seamonkey-2.20.ebuild:
  Stable for x86, wrt bug #479968

  12 Aug 2013; Agostino Sarubbo <ago@gentoo.org> seamonkey-2.20.ebuild:
  Stable for amd64, wrt bug #479968

*seamonkey-2.20 (07 Aug 2013)
