@@ -65,23 +65,23 @@ DIST seamonkey-2.22-zh-TW.xpi 832945 SHA256 e2b24a739d245884ce1b040b24866d51b66e
 DIST seamonkey-2.22.source.tar.bz2 148026129 SHA256 c0c487449f2c3893dfb0e2665e550ce6464055497132eaed0964606d72132535 SHA512 b71ac0236f6c7361afb3fc30c3d188313ce2beb4693542c27c2d7fc90b8c9267dd07b617c7f8c5afaec474ec59a1183a5a02a4225cfdc44b6cf0aed06188013c WHIRLPOOL 81e3b5fbcdae25234ff8baee863cbd2ea9441f251dbbfe9d1a1136587ede58de17ffafd28a73a2958a843c844e7e062be0a53b7d656a00b9d1be7101a15aa940
 EBUILD seamonkey-2.21-r1.ebuild 10980 SHA256 030d3e85a50bb80737afb983365357d0c5080b733ce488a0627a771d8cb22d5c SHA512 d6072a07bd3ccd3d0ce39792d3c28f2edc17d481ffc11a2b5bf5c81b3dc4cf2d95b62db43178de0ebf7d70408e93563f045a7081b74b4b40dff457f42e387320 WHIRLPOOL 82876140f2fb58d5f7732d17bf154d5fd7a1dc13d7fbd5736ffaaa6f1b637459d7246a9258d1a15acc342b24b738dfca5b2d0f15c7c30472cdcfb7b110587ece
 EBUILD seamonkey-2.21.ebuild 11039 SHA256 2d44b13e981939fd736d26e66129784ef6cf58609e7dc25473193393074ea3b4 SHA512 308a0f246a7d8fa10172825e5df2bd948c2a3ef4fae03b31d902b79e711c2f640888be95469e2637171142a8d2c9eb79e7106a6c1f4c75288089de1b7250800e WHIRLPOOL 0830f9981c41f1ccdd9e451e3d7a31c3071120f36bee11b5185795337f12087d051e32a361ccabd8ca209b02d1371cae1e0235fd1277fad3c3addd2eaab4b7d6
-EBUILD seamonkey-2.22.ebuild 10923 SHA256 88cc7a779f298a6f9af17899b127cf69c997d395634076872d6e357a21e29e1e SHA512 bb508251b9ba38fa35e66ae494651668be223aa76a9e5cf50c34b2f6cd107fee34fea3be4e84592ce3c0127ea7c9133e51fc8ee6e7ff8286f8cdb331e21e89e1 WHIRLPOOL e832694f6a3bf1b666f54530df21140d676d5d34acb7e0875273f839743b7ba6cc7d9feb2aae928b5b99d4844d90387ed05d034852bc49aade9d33f675326e46
-MISC ChangeLog 65168 SHA256 9f014cbf8a1a1ad1d2ff7a706c4a6b1294132756c64249360ad16f6a9cccdd68 SHA512 c80e68ed1e03e1cdf4adff4bc1860a5d3956d607d5b9dc07a97510d0cecc23ed500789b1fe4995cffc0369cfb750829298318ef8390d165e590d86e0f956efa2 WHIRLPOOL ca7f36eedf28dd2d193d9923453d095cf042013abd507b6db5d36d2452c4e05d56404f9efcbbe8dabe229fd88df63ad0f38065daaa696ce4e35eb3ce088da81a
+EBUILD seamonkey-2.22.ebuild 10921 SHA256 9d0634d8e9b1b01745a6b2a991a4a1aaca6ae2adcb66f3aeccc03fa4f1108318 SHA512 218e959e80348bae75cc5ffa4a1822df12cde308e77ebf6aebe277101ffaa8d7a20e0190ca89e80fe6df264c934a5554d13030f14bd1ee5b4a3a1340dbc5362f WHIRLPOOL 5a3c52fe1cd8d2f77bc7d4f00b09fa519ed7f8d84dd906091ce3358cfe6ba3222b61e9e8318134bb1397fdc0f79d419916b164cefd2a828bfb925a7e6b30d110
+MISC ChangeLog 65303 SHA256 ae6fa0a230924b3452577ae3416dbdfc86e6420121bcd9d374a257499bfc7d42 SHA512 98b05b97709063a23f8993bf47ba25253590cc40954e74373acc8850ae50a6ba9370b9c5a45fb13dafe557ac61f9b9324eee2a1758a5de2942b4da978212273e WHIRLPOOL b884b66f72d8fb96253b4afdbf79f6a82e3bf3f7022cfb0fc2065432077fa2e625de6ba08f3a50e64e0a3290f6fcdc42b2b6edef00c9d54d0e4dfb8f2aea0d2e
 MISC metadata.xml 1124 SHA256 ed82f76250ccd3e702a5fa60272382dd0025a4aa1e7480e4691170c259910464 SHA512 e53e8cf1fc76bfefa4f669703d8b27f0befdfe90e8a098a14a069a02c6c9f8b14edb2af40df96a746b1679bc1523c74e625d15f67bb72c166f799b7d4780163c WHIRLPOOL e6ebb16110bceb8de7609fc02b1b9baf441da8bb8227c2f5f2ad88ab3d1d3dd50704bfa9a965444010ea30c809c6edd03b3624d0023d9b7b667185bda52ab392
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSdRl6AAoJEPiazRVxLXTFfZ8P/iCKEOhPbToRlNlU2ye4mp66
-W6qZ+cmWIfPlmlkj666B5KTCdi1kcxdbPQMGiehDDDVLOyur//h2JJfpCvKQg5Qy
-uKN3kebWQdiTremlfRsqzYikqG1R6n77HKi+oy9Tyn3zbRxWzMrSfN4GoHN4Wmi6
-8KYOOOtks1ACLpw88x5kex/y0NFv45rPHJmzS/9eHMDyA11Os2hPhEs87bISiWWP
-IcwbvQI5O1YvDl28UyG35UDqxL6DW+H/YBWwB7EoInywT3Qi3lLQQZMUskrC48US
-tWcUxjKB9ULdcCLqWmv7KkTtKx2McsB0eYOcwHvH0U6ElBvaj0oJ2XYPjPJhAyPx
-zz69MRQ3L0NJ5pzWgpFi63LrXcZ8LNI8Ud5yoZ5m8uFfKb+VSNpFNsRkGXAwUfAW
-Wsc6FLxufJMaGSFGy8HabX+TLFn75WCavJCU4iC2Xy76bPSyxPWnUratOHbSTvtP
-8WEusFR/SycwLoz2/2bLwWfNGhdm2Lq+g7VuMc52MUFpr7h/a8l8bN/S8ZXL7vi6
-KYDKSi7ljjraVW8wvPj2ifL4w4j0tziRGwalo2qDmkPlslSkHPs4J7XZK9he2wSP
-MIaFXts0cYmU7MAWnjrhWxK8Wq2dhiXYtFUUDJcCoctH+17HV+BqPcoc0hlWa3SZ
-zKsO3O9ekMOr+NuA6dLA
-=P0ls
+iQIcBAEBCAAGBQJSdz2OAAoJEPiazRVxLXTFCYAQANusK2ieXB7VbLECdvfss1K2
+aYmmQ6TfnYXNU51YWr6LYP2Zo4yEjawXESjxS+tH5mu/XBkwnIlkySuR9vKmFLiz
+0m8f4mIb9oSgjFPwC9Y968mL+36ZonvyD/5Bcp6ydnNoCKe8es9q5NtTvAEkfLiv
+pOAKQS0aj08bjTHO6UJTWtxhORehhICVaximrrPJHwGkMKySHsa50B0RF1l/KAsY
+QqjCbmZeBXUuR7B08lLnZU2nL5nJZcvhx6tUw5MpBYDVNxntpLb9UCpFtDn9Nt44
++cLaJVviTps+eXPQ6YOUTMCvAEQMpTuw/2U+X0JEdDZ3geOco/PQqRQBJ8e2K93H
+QjrJkbO7Fkfzn0bUT8f3fE2zUZ/Oi69xwKflA1XHHL6DrRglvhwYcn7zot7A4tZT
+Oy3KBhVZ+VnJYCZMj8nh56g3ZLusZlPnthRRm705c/ehWrbaxsAsWFs38SllZocM
+CbRYmecWvcQtW/dRMwDpCnOncvUetJfdPucprg1OFz2lXhWtO8s/uaTrXCdoeV7B
+Juakh4UEkUKpIx8kC7wSTtpV0aKjG4zsC5zN4Y/r0aSk/0d42vzKH3xd4USs39v1
+pPwjgwqyyw3by4KJAeJiwSibhzfFlTR33WuR1u4fQ31/MHCRoP311QVe5mFu6R2n
+kkhxIru1RepS06YM88aY
+=yz0n
 -----END PGP SIGNATURE-----
