@@ -1,6 +1,9 @@
 # ChangeLog for www-client/seamonkey
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.466 2013/11/02 15:25:45 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.467 2013/11/04 06:24:13 polynomial-c Exp $
+
+  04 Nov 2013; Lars Wendler <polynomial-c@gentoo.org> seamonkey-2.22.ebuild:
+  Fixed dependencies on libpng (bug #490314) and sqlite.
 
 *seamonkey-2.22 (02 Nov 2013)
 
